2016-06-20  Georg-Johann Lay  <avr@gjlay.de>

	PR target/71103
	* config/avr/avr.md (movqi): Handle loading subreg:qi (const).

2016-06-20  Georg-Johann Lay  <avr@gjlay.de>

	* config/avr/avr.c (avr_print_operand): Fix "format not a string
	literal" build warnings.
	(avr_print_operand_address): Dito.

2016-06-19  David Edelsohn  <dje.gcc@gmail.com>

	PR target/71375
	* config/rs6000/aix51.h (TARGET_EXTRA_BUILTINS): Define as 0.
	* config/rs6000/aix43.h (TARGET_EXTRA_BUILTINS): Same.

2016-06-18  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.h (TARGET_LONG_PIC_PCREL_CALL): Remove.

2016-06-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR bootstrap/71435
	* reload1.c (reload): Pass 0 to finish_spills when called because
	update_eliminables_and_spill returns true and remove did_spill.
	(finish_spills): Adjust comment and document GLOBAL parameter.

2016-06-17  DJ Delorie  <dj@redhat.com>

	PR target/71338
	* config/rl78/rl78-expand.c (umulqihi3): Enable for G10.
	* config/rl78/rl78-virtual.c (umulhi3_shift_virt): Likewise.
	(umulqihi3_virt): Likewise.
	* config/rl78/rl78-real.c (umulhi3_shift_real): Likewise.
	(umulqihi3_real): Likewise.

2016-06-17  Martin Liska  <mliska@suse.cz>

	* tree-ssa-reassoc.c (transform_add_to_multiply): Use auto_vec.

2016-06-17  Martin Liska  <mliska@suse.cz>

	* predict.def: PRED_LOOP_EXIT from 92 to 85.

2016-06-17  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/arm/arm_neon.h (vadd_f32): replace __FAST_MATH with
	__FAST_MATH__.
	(vaddq_f32): Likewise.
	(vmul_f32): Likewise.
	(vmulq_f32): Likewise.
	(vsub_f32): Likewise.
	(vsubq_f32): Likewise.

2016-06-17  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/71347
	* tree-ssa-loop-ivopts.c (determine_group_iv_cost_address): Compute
	cost for all uses in group.

2016-06-17 Bin Cheng  <bin.cheng@arm.com>

	* tree-vect-loop.c (vect_create_epilog_for_reduction): Only
	insert gimple seq if it's not empty.

2016-06-17  Bin Cheng  <bin.cheng@arm.com>
